--- a/04 Places of Interest/Places of Interest/Info.plist
+++ b/04 Places of Interest/Places of Interest/Info.plist
@@ -22,6 +22,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We will geo-tag your places so you can view them in a map.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
